--- a/练手.ipynb
+++ b/练手.ipynb
@@ -127,6 +127,193 @@
     "    return total_loss\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a21236eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#DPOloss\n",
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "def dpo_loss(pi_w, pi_l, beta=0.1):\n",
+    "    \"\"\"\n",
+    "    DPO 核心损失（变量极简版）\n",
+    "    输入：\n",
+    "        pi_w: 新策略对「赢样本w」的log概率 (batch_size,) —— 人类偏好的回复\n",
+    "        pi_l: 新策略对「输样本l」的log概率 (batch_size,) —— 人类不偏好的回复\n",
+    "        beta: 温度超参（控制偏好强度，默认0.1，工业界常用）\n",
+    "    输出：\n",
+    "        dpo_total_loss: DPO总损失\n",
+    "    \"\"\"\n",
+    "    # 1. 计算偏好加权后的log概率（beta放大偏好差异）\n",
+    "    w_score = beta * pi_w\n",
+    "    l_score = beta * pi_l\n",
+    "    \n",
+    "    # 2. 对比损失：让赢样本的相对概率最大化（交叉熵形式）\n",
+    "    # 等价于 -log( exp(w_score) / (exp(w_score) + exp(l_score)) )\n",
+    "    logits = torch.stack([w_score, l_score], dim=1)  # (batch, 2)\n",
+    "    loss = -torch.mean(F.log_softmax(logits, dim=1)[:, 0])  # 只关注赢样本的softmax概率\n",
+    "    \n",
+    "    # 3. 可选：熵正则（鼓励探索，可选添加）\n",
+    "    entropy = -torch.mean(pi_w)  # 用赢样本的熵近似（简化处理）\n",
+    "    entropy_loss = 0.01 * entropy  # 权重0.01，弱正则\n",
+    "    \n",
+    "    return loss - entropy_loss  # 负号：最小化损失=最大化熵\n",
+    "\n",
+    "if __name__=='__mian__':\n",
+    "    # 模拟batch_size=32的偏好数据（赢/输样本的log概率）\n",
+    "    batch_size = 32\n",
+    "    pi_w = torch.randn(batch_size)  # 赢样本log概率\n",
+    "    pi_l = torch.randn(batch_size)  # 输样本log概率\n",
+    "\n",
+    "    loss = dpo_loss(pi_w, pi_l)\n",
+    "    print(\"DPO损失:\", loss.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8174a5ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#GRPO loss\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "def grpo_loss(pi_new, pi_old, r, group_size=4, eps=0.2, c2=0.01):\n",
+    "    \"\"\"\n",
+    "    GRPO 核心损失（变量极简版，无Critic，组内对比估算优势）\n",
+    "    输入：\n",
+    "        pi_new: 新策略的log概率 (batch_size × group_size,) —— 组内所有样本的logp\n",
+    "        pi_old: 旧策略的log概率 (batch_size × group_size,) —— 固定不更新\n",
+    "        r: 组内样本的奖励/偏好分数 (batch_size × group_size,) —— 组内每条回复的得分\n",
+    "        group_size: 每组采样数量（默认4，常用值）\n",
+    "        eps: 裁剪系数（同PPO，默认0.2）\n",
+    "        c2: 熵正则权重（默认0.01）\n",
+    "    输出：\n",
+    "        grpo_total_loss: GRPO总损失\n",
+    "    \"\"\"\n",
+    "    # 1. 重构维度：适应组内计算 (batch_size, group_size)\n",
+    "    batch_size = pi_new.shape[0] // group_size\n",
+    "    pi_new = pi_new.reshape(batch_size, group_size)\n",
+    "    pi_old = pi_old.reshape(batch_size, group_size)\n",
+    "    r = r.reshape(batch_size, group_size)\n",
+    "    \n",
+    "    # 2. 组内相对优势估算（替代Critic，核心！）\n",
+    "    # 优势 = 样本奖励 - 组内平均奖励（组内对比，体现相对好坏）\n",
+    "    r_mean = r.mean(dim=1, keepdim=True)  # 每组的平均奖励\n",
+    "    A = r - r_mean  # 组内相对优势（无需Critic，直接通过组内对比获得）\n",
+    "    \n",
+    "    # 3. 策略损失（带裁剪的重要性采样，同PPO核心逻辑）\n",
+    "    ratio = torch.exp(pi_new - pi_old)  # 重要性比（log转exp，数值稳定）\n",
+    "    clip_ratio = torch.clamp(ratio, 1-eps, 1+eps)  # 限制更新幅度\n",
+    "    surr1 = ratio * A\n",
+    "    surr2 = clip_ratio * A\n",
+    "    policy_loss = -torch.mean(torch.min(surr1, surr2))  # 取min+负号（梯度下降）\n",
+    "    \n",
+    "    # 4. 熵正则（鼓励组内多样性，可选但推荐）\n",
+    "    entropy = -torch.mean(pi_new, dim=1)  # 每组的熵\n",
+    "    entropy_loss = -c2 * entropy.mean()  # 批量平均\n",
+    "    \n",
+    "    # 5. 总损失（无价值损失，因为去除了Critic）\n",
+    "    total_loss = policy_loss + entropy_loss\n",
+    "    \n",
+    "    return total_loss\n",
+    "\n",
+    "if __name__=='__main__':\n",
+    "# 模拟输入：batch_size=8组，每组4个样本（total=32个样本）\n",
+    "    batch_size = 8\n",
+    "    group_size = 4\n",
+    "    total_samples = batch_size * group_size\n",
+    "\n",
+    "    pi_new = torch.randn(total_samples)  # 新策略log概率\n",
+    "    pi_old = torch.randn(total_samples)  # 旧策略log概率（固定）\n",
+    "    r = torch.randn(total_samples)       # 组内样本奖励（可正可负）\n",
+    "\n",
+    "    loss = grpo_loss(pi_new, pi_old, r, group_size=group_size)\n",
+    "    print(\"GRPO总损失:\", loss.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "070ac8a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "def grpo_loss(pi_new, pi_old, r, group_size=4, eps=0.2, c2=0.01, std_eps=1e-8):\n",
+    "    \"\"\"\n",
+    "    GRPO 核心损失（带标准差归一化的优势计算）\n",
+    "    输入：\n",
+    "        pi_new: 新策略的log概率 (batch_size × group_size,) —— 组内所有样本的logp\n",
+    "        pi_old: 旧策略的log概率 (batch_size × group_size,) —— 固定不更新\n",
+    "        r: 组内样本的奖励/偏好分数 (batch_size × group_size,) —— 组内每条回复的得分\n",
+    "        group_size: 每组采样数量（默认4，常用值）\n",
+    "        eps: 裁剪系数（同PPO，默认0.2）\n",
+    "        c2: 熵正则权重（默认0.01）\n",
+    "        std_eps: 防止除以零的小常数（默认1e-8）\n",
+    "    输出：\n",
+    "        grpo_total_loss: GRPO总损失\n",
+    "    \"\"\"\n",
+    "    # 1. 重构维度：适应组内计算 (batch_size, group_size)\n",
+    "    batch_size = pi_new.shape[0] // group_size\n",
+    "    pi_new = pi_new.reshape(batch_size, group_size)\n",
+    "    pi_old = pi_old.reshape(batch_size, group_size)\n",
+    "    r = r.reshape(batch_size, group_size)\n",
+    "    \n",
+    "    # 2. 组内相对优势估算（带标准差归一化）\n",
+    "    r_mean = r.mean(dim=1, keepdim=True)  # 每组的平均奖励\n",
+    "    r_std = r.std(dim=1, keepdim=True)    # 每组的奖励标准差\n",
+    "    # 优势 = (样本奖励 - 组内平均奖励) / 组内标准差（标准化处理）\n",
+    "    A = (r - r_mean) / (r_std + std_eps)  # 加入std_eps防止除以零\n",
+    "    \n",
+    "    # 3. 策略损失（带裁剪的重要性采样，同PPO核心逻辑）\n",
+    "    ratio = torch.exp(pi_new - pi_old)  # 重要性比（log转exp，数值稳定）\n",
+    "    clip_ratio = torch.clamp(ratio, 1-eps, 1+eps)  # 限制更新幅度\n",
+    "    surr1 = ratio * A\n",
+    "    surr2 = clip_ratio * A\n",
+    "    policy_loss = -torch.mean(torch.min(surr1, surr2))  # 取min+负号（梯度下降）\n",
+    "    \n",
+    "    # 4. 熵正则（鼓励组内多样性，可选但推荐）\n",
+    "    entropy = -torch.mean(pi_new, dim=1)  # 每组的熵\n",
+    "    entropy_loss = -c2 * entropy.mean()  # 批量平均\n",
+    "    \n",
+    "    # 5. 总损失（无价值损失，因为去除了Critic）\n",
+    "    total_loss = policy_loss + entropy_loss\n",
+    "    \n",
+    "    return total_loss\n",
+    "\n",
+    "if __name__=='__main__':\n",
+    "    # 模拟输入：batch_size=8组，每组4个样本（total=32个样本）\n",
+    "    batch_size = 8\n",
+    "    group_size = 4\n",
+    "    total_samples = batch_size * group_size\n",
+    "\n",
+    "    pi_new = torch.randn(total_samples)  # 新策略log概率\n",
+    "    pi_old = torch.randn(total_samples)  # 旧策略log概率（固定）\n",
+    "    r = torch.randn(total_samples)       # 组内样本奖励（可正可负）\n",
+    "\n",
+    "    loss = grpo_loss(pi_new, pi_old, r, group_size=group_size)\n",
+    "    print(\"带标准差归一化的GRPO总损失:\", loss.item())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9187fd1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -136,7 +323,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.14"
   }
  },
